[package]
name = "socks5"
version = "0.1.0"
authors = ["vinoca <vinoca@vinoca.org>"]
description = "a implement of socks5 protocol"
repository = "https://github.com/vincascm/socks5"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["tcp", "dns", "io-util"] }
bytes = "0.5.4"
libc = "0.2.68"

