[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
socks5-client = { path = "../client" }
socks5-server = { path = "../server" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.18", features = [ "compat"] }
smol = "1"
futures-lite = "2.6.1"

